# ftx-app

./: .gitignore  README.md
infrastructure/: docker-compose.yml
infrastructure/olly/: docker-compose.yaml
infrastructure/olly/prometheus_data/: prometheus.yml
load_tests/: locust.conf  locustfile.py
services/orders/: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
services/orders/alembic/: env.py
services/orders/alembic/versions/: 20250716.1758-add_init_table-839032df87f2.py  20250716_1757_install_postgis.py
services/orders/src/: api_app.py  settings.py
services/orders/src/database/: postgresql.py
services/orders/src/dependencies/: depedencies.py
services/orders/src/models/: orders.py
services/orders/src/repositories/orders/: orders.py
services/orders/src/repositories/tables/: base.py  orders.py
services/orders/src/routes/v1/: orders.py
services/orders/src/services/: orders.py
